# SudokuSolver

./: .gitignore  CMakeLists.txt  CPUSolver.sln  SudokuSolver.md  SudokuSolver.sln
SudokuSolver/: CMakeLists.txt  CPUSolver.cpp  CPUSolver.vcxproj  CPUSolver.vcxproj.filters  GPUSolver.cpp  GPUSolver.cu  SudokuSolver.vcxproj  main.cpp  main.h
sudoku_data/: out.txt  sudoku_data.csv  test.txt
